--- a/index.html
+++ b/index.html
@@ -4,13 +4,41 @@
         <Title>Weather App</Title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="styling.css">
+        <script src="script.js"></script>
     </head>
     <body>
         <div id="background">
             <div id="main_container" class="container  position-absolute top-50 start-50 translate-middle">
-                <div class="tabs container"></div>
-                <div class="tabs container"></div>
-                <div class="tabs container"></div>
+
+                <!-- Tab displaying actual weather based on location -->
+                <div class="tabs container">
+                    <div class="row" style="height: 100%;">
+                        <div class="col-7">
+                            <div class="row" style="height: 65%;">
+                                <div id="temperature_now" class="col text-center align-self-center"></div>
+
+                            </div>
+                            <div class="row"  style="height: 35%;">
+                                <div class="input-group mb-3 align-self-center">
+                                    <input type="text" class="form-control" placeholder="City" aria-label="Recipient's username" aria-describedby="button-addon2">
+                                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
+                                </div>
+                                <!-- <div class="col text-center align-self-center">Praha</div> -->
+                            </div>
+                        </div>
+                        <div id="weather_image" class="col-5 text-center align-self-center">
+                            <img src="images/sunny.png" class="img-fluid mx-auto">  
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="tabs container">
+
+                </div>
+                <div class="tabs container">
+
+                </div>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
