--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="styling.css">
         <script src="script.js"></script>
+        <meta charset="UTF-8" />
     </head>
     <body>
         <div id="background">
@@ -15,7 +16,7 @@
                     <div class="row" style="height: 100%;">
                         <div class="col-7">
                             <div class="row" style="height: 65%;">
-                                <div id="temperature_now" class="col text-center align-self-center"></div>
+                                <div id="temperature_now" class="col text-center align-self-center">-</div>
 
                             </div>
                             <div class="row"  style="height: 35%;">
