Icon loaded from weather API

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                                 <!-- <div class="col text-center align-self-center">Praha</div> -->
                             </div>
                         </div>
-                        <div id="weather_image" class="col-5 text-center align-self-center">
-                            <img src="images/sunny.png" class="img-fluid mx-auto">  
+                        <div class="col-5 text-center align-self-center">
+                            <img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto">  
                         </div>
                     </div>
                 </div>
