--- a/index.html
+++ b/index.html
@@ -33,10 +33,33 @@
                     </div>
                 </div>
 
-
+                <!-- Tab displaying next 12 hours weather forecast based on location -->
                 <div class="tabs container">
+                    <!-- Display time -->
+                    <div class="row align-items-end text-center fs-3" style="height: 33%;">
+                        <div id="+1hour_temp" class=" col">-</div>
+                        <div id="+2hour_temp" class="col">-</div>
+                        <div id="+3hour_temp" class="col">-</div>
+                        <div id="+4hour_temp" class="col">-</div>
+                        <div id="+5hour_temp" class="col">-</div>
+                    </div>
 
+                    <!-- Display temperature -->
+                    <div class="row" style="height: 33%;">
+                        <div id="+1hour_cond" class=" col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
+                        <div id="+2hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
+                        <div id="+3hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
+                        <div id="+4hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
+                        <div id="+5hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
+                    </div>
+
+                    <!-- Display weather condition -->
+                    <div class="row" style="height: 34%;">
+                        
+                    </div>
                 </div>
+
+                 <!-- Tab displaying next 4 days weather forecast based on location -->
                 <div class="tabs container">
 
                 </div>
