--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             </div>
                             <div class="row"  style="height: 35%;">
                                 <div class="input-group mb-3 align-self-center">
-                                    <input type="text" class="form-control" placeholder="City" aria-label="Recipient's username" aria-describedby="button-addon2">
+                                    <input id="location_input" type="text" class="form-control" placeholder="City" aria-label="Recipient's username">
                                     <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
                                 </div>
                                 <!-- <div class="col text-center align-self-center">Praha</div> -->
@@ -35,27 +35,31 @@
 
                 <!-- Tab displaying next 12 hours weather forecast based on location -->
                 <div class="tabs container">
-                    <!-- Display time -->
+                    <!-- Display temperature -->
                     <div class="row align-items-end text-center fs-3" style="height: 33%;">
-                        <div id="+1hour_temp" class=" col">-</div>
+                        <div id="+1hour_temp" class="col">-</div>
                         <div id="+2hour_temp" class="col">-</div>
                         <div id="+3hour_temp" class="col">-</div>
                         <div id="+4hour_temp" class="col">-</div>
                         <div id="+5hour_temp" class="col">-</div>
                     </div>
 
-                    <!-- Display temperature -->
-                    <div class="row" style="height: 33%;">
-                        <div id="+1hour_cond" class=" col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
+                    <!-- Display condition -->
+                    <div class="row align-items-center" style="height: 33%;">
+                        <div id="+1hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
                         <div id="+2hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
                         <div id="+3hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
                         <div id="+4hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
                         <div id="+5hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
                     </div>
 
-                    <!-- Display weather condition -->
-                    <div class="row" style="height: 34%;">
-                        
+                    <!-- Display time -->
+                    <div class="row align-items-center text-center fs-2" style="height: 34%;">
+                        <div id="+1hour_time" class="col">-</div>
+                        <div id="+2hour_time" class="col">-</div>
+                        <div id="+3hour_time" class="col">-</div>
+                        <div id="+4hour_time" class="col">-</div>
+                        <div id="+5hour_time" class="col">-</div>
                     </div>
                 </div>
 
