Hourly forecast added

--- a/index.html
+++ b/index.html
@@ -37,29 +37,29 @@
                 <div class="tabs container">
                     <!-- Display temperature -->
                     <div class="row align-items-end text-center fs-3" style="height: 33%;">
-                        <div id="+1hour_temp" class="col">-</div>
-                        <div id="+2hour_temp" class="col">-</div>
-                        <div id="+3hour_temp" class="col">-</div>
-                        <div id="+4hour_temp" class="col">-</div>
-                        <div id="+5hour_temp" class="col">-</div>
+                        <div id="hour1_temp" class="col">-</div>
+                        <div id="hour2_temp" class="col">-</div>
+                        <div id="hour3_temp" class="col">-</div>
+                        <div id="hour4_temp" class="col">-</div>
+                        <div id="hour5_temp" class="col">-</div>
                     </div>
 
                     <!-- Display condition -->
                     <div class="row align-items-center" style="height: 33%;">
-                        <div id="+1hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
-                        <div id="+2hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
-                        <div id="+3hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
-                        <div id="+4hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
-                        <div id="+5hour_cond" class="col"><img id="weather_image" src="images/sunny.png" class="img-fluid mx-auto"></div>
+                        <div class="col"><img id="hour1_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour2_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour3_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour4_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="hour5_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
                     </div>
 
                     <!-- Display time -->
-                    <div class="row align-items-center text-center fs-2" style="height: 34%;">
-                        <div id="+1hour_time" class="col">-</div>
-                        <div id="+2hour_time" class="col">-</div>
-                        <div id="+3hour_time" class="col">-</div>
-                        <div id="+4hour_time" class="col">-</div>
-                        <div id="+5hour_time" class="col">-</div>
+                    <div class="row align-items-center text-center fs-4" style="height: 34%;">
+                        <div id="hour1_time" class="col">-</div>
+                        <div id="hour2_time" class="col">-</div>
+                        <div id="hour3_time" class="col">-</div>
+                        <div id="hour4_time" class="col">-</div>
+                        <div id="hour5_time" class="col">-</div>
                     </div>
                 </div>
 
