Day forecast added. Need to further test and polish

--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
 
                  <!-- Tab displaying next 4 days weather forecast based on location -->
                 <div class="tabs container">
+                    <!-- Display temperature -->
+                    <div class="row align-items-end text-center fs-3" style="height: 33%;">
+                        <div id="day0_temp" class="col">-</div>
+                        <div id="day1_temp" class="col">-</div>
+                        <div id="day2_temp" class="col">-</div>
+                        <div id="day3_temp" class="col">-</div>
+                        <div id="day4_temp" class="col">-</div>
+                    </div>
+
+                    <!-- Display condition -->
+                    <div class="row align-items-center" style="height: 33%;">
+                        <div class="col"><img id="day0_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day1_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day2_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day3_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                        <div class="col"><img id="day4_cond" src="images/sunny.png" class="img-fluid mx-auto hour_image"></div>
+                    </div>
+
+                    <!-- Display time -->
+                    <div class="row align-items-center text-center fs-4" style="height: 34%;">
+                        <div id="day0_time" class="col">-</div>
+                        <div id="day1_time" class="col">-</div>
+                        <div id="day2_time" class="col">-</div>
+                        <div id="day3_time" class="col">-</div>
+                        <div id="day4_time" class="col">-</div>
+                    </div>
 
                 </div>
             </div>
